PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 5.0.6
- Renamed CachingRecursiveIterator to RecursiveCachingIterator. (Marcus)
- Fixed bug #34787 (SOAP Client not handling boolean types correctly). (Dmitry)
- Fixed bug #34723 (array_count_values() strips leading zeroes). (Tony)
- Fixed bug #34678 (__call(), is_callable() and static methods). (Dmitry)
- Fixed bug #34643 (wsdl default value has no effect). (Dmitry)
- Fixed bug #34617 (zend_deactivate: objects_store used after
  zend_objects_store_destroy is called). (Dmitry)
- Fixed bug #34557 (php -m exits with "error" 1). (Johannes)
- Fixed bug #34505 (Possible memory corruption when unmangling properties 
  with empty names). (Tony)
- Fixed bug #34478 (Incorrect parsing of url's fragment (#...)). (Dmitry)
- Fixed bug #34453 (parsing http://www.w3.org/2001/xml.xsd exception). (Dmitry)
- Fixed bug #34450 (Segfault when calling mysqli_close() in destructor). (Tony)
- Fixed bug #34449 (ext/soap: XSD_ANYXML functionality not exposed). (Dmitry)
- Fixed bug #34199 (if($obj)/if(!$obj) inconsistency because of cast handler).
  (Dmitry, Alex)
- Fixed bug #32179 (xmlrpc_encode() segfaults with recursive references). (Tony)

05 Sep 2005, PHP 5.0.5
- Upgraded PCRE library to version 5.0. (Andrei)
- Removed php_check_syntax() function which never worked properly. (Ilia)
- Added new function mysqli_set_charset(). (Georg)
- Added man pages for "phpize" and "php-config" scripts. (Jakub Vrana)
- Added support for .cc files in extensions. (Brian)
- Added PHP_INT_MAX and PHP_INT_SIZE as predefined constants. (Andrey)
- Changed sha1_file() and md5_file() functions to use streams instead of
  low level IO. (Uwe)
- Changed ming to support official 0.2a and 0.3 library versions. (Marcus)
- Fixed failing queries problem (FALSE returned) with mysqli_query() on 64 bit.
  (Andrey)